index.html full done and half css

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="styles/landing-page.css">
 </head>
 <body>
+    <!-- Header Section -->
    <header class="header">
-    <div>
         <nav>
         <h3 class="primary-color">LOGO</h3>
         <a href=""><button class="primary-btn primary-color">Sign Up
@@ -17,7 +17,111 @@
         <h1>Cool Dark UI Template for <br>Webflow Agencies!</h1>
         <button class="primary-btn">Stay Focused</button>
         </div>
-    </div>
    </header> 
+    <main>
+        <!-- see it in Action section -->
+        <section class="see-it-in-action-container">
+            <div class="see-it-in-action">
+                <div class="see-it-in-action-text">
+                    <h4 class="action-text">See it in action</h4>
+                    <p class="action-text">Explore the live preview and imagine your <br> brand in this bold new look.</p>
+                    <button class="action-text primary-btn">Launch Live Preview</button>
+                </div>
+                <div>
+                    <img class="action-image" src="images/wc-mini.png" alt="Webflow Conf2022">
+                </div>
+            </div>
+        </section>
+        <!-- Joined productive user section -->
+        <section class="joined-user-container">
+            <div>
+                <h4>Joined Thousands of Productive Users</h4>
+                <div class="joined-user-stats">
+                     <div class="joined-user-text">
+                        <p class="joined-1stp primary-color">50K</p>
+                        <p class="joined-2ndp">Active Users</p>
+                     </div>
+                     <div class="joined-user-text">
+                        <p class="joined-1stp primary-color">2M+</p>
+                        <p class="joined-2ndp">Focus Sessions</p>
+                     </div>
+                     <div class="joined-user-text">
+                        <p class="joined-1stp primary-color">95%</p>
+                        <p class="joined-2ndp">Satisfaction Rate</p>
+                     </div>
+                </div>
+            </div>
+        </section>
+        <!--What our user say section  -->
+        <section class="user-say-container">
+            <div>
+                <h4>What our users say</h4>
+                <div>
+                    <div class="our-user-say">
+                        <img src="images/icon-star.png" alt="star icon">
+                        <img src="images/icon-star.png" alt="star icon">
+                        <img src="images/icon-star.png" alt="star icon">
+                        <img src="images/icon-star.png" alt="star icon">
+                        <img src="images/icon-star.png" alt="star icon">
+                        <h3>Loved by designers</h3>
+                        <p class="our-user-say-p">This template instantly leveled up our <br> presence.” – Studio Vertex</p>
+                        <div>
+                            <div class="reviewer"> 
+                                <img src="images/avatar.png" alt="user avatar">
+                                <div >
+                                    <p class="reviewer-text1">Reviewer name</p>
+                                    <p class="reviewer-text2">Date</p>
+
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+        </section>
+        <!-- Ready to focus better section -->
+        <section class="ready-to-focus-container">
+            <div class="ready-to-focus">
+                <h4>Ready to focus better</h4>
+                <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                <button class="primary-btn">Ger Started Free</button>
+                <img src="images/wc-big.png" alt="Webflow confession 2022">
+            </div>
+        </section>
+        <!-- Let's get in Touch section -->
+        <section class="get-in-touch-container">
+            <div class="get-in-touch">
+                <div>
+                    <h5>Let’s Get in Touch</h5>
+                </div>
+                <div class="get-in-touch-form">
+                    <form>
+                        <label for="email">Email</label>
+                        <input type="email" name="email" id="" placeholder="example@email.com" required>
+                        <label for="name">Name</label>
+                        <input type="text" name="name" id="" placeholder="full name" required>
+                        <label for="message">Message</label>
+                        <textarea name="message" id="" cols="21" rows="4" placeholder="write your message...." required></textarea>
+                        <button class="primary-btn get-button" type="submit" >Get in Touch</button>
+                    </form>
+                </div>
+            </div>
+        </section>
+
+
+    </main>
+    <!-- Footer section -->
+    <footer>
+        <div>
+            <h3>LOGO</h3>
+            <P>Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</P>
+            <div>
+                <a href="">Home</a>
+                <a href="">About</a>
+                <a href="">How it works</a>
+                <a href="">Services</a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
