--- a/index.html
+++ b/index.html
@@ -2,20 +2,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing page by Shefaul</title>
+    <title>Dark flow landing page</title>
     <link rel="stylesheet" href="styles/landing-page.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Header Section -->
    <header class="header">
         <nav>
-        <h3 class="primary-color">LOGO</h3>
-        <a href=""><button class="primary-btn primary-color">Sign Up
+        <h3 class="primary-color">DARK FLOW</h3>
+        <a href=""><button class="primary-btn primary-color railway-bold">Sign Up
         </button></a>
         </nav>
         <div class="hero-container">
-        <h1>Cool Dark UI Template for <br>Webflow Agencies!</h1>
-        <button class="primary-btn">Stay Focused</button>
+                <h1 class="raleway-bold">Cool Dark UI Template for <br>Webflow Agencies!</h1>
+                <button class="primary-btn raleway-bold">Stay Focused</button>
+
         </div>
    </header> 
     <main>
@@ -23,9 +30,9 @@
         <section class="see-it-in-action-container">
             <div class="see-it-in-action">
                 <div class="see-it-in-action-text">
-                    <h4 class="action-text">See it in action</h4>
-                    <p class="action-text">Explore the live preview and imagine your <br> brand in this bold new look.</p>
-                    <button class="action-text primary-btn">Launch Live Preview</button>
+                    <h3 class="action-text-heading inter-bold">See it in action</h3>
+                    <p class="action-text-p raleway-regular">Explore the live preview and imagine your <br> brand in this bold new look.</p>
+                    <button class="action-text primary-btn raleway-bold">Launch Live Preview</button>
                 </div>
                 <div>
                     <img class="action-image" src="images/wc-mini.png" alt="Webflow Conf2022">
@@ -34,20 +41,20 @@
         </section>
         <!-- Joined productive user section -->
         <section class="joined-user-container">
-            <div>
-                <h4>Joined Thousands of Productive Users</h4>
+            <div class="joined-user">
+                <h3 class="raleway-bold" >Joined Thousands of Productive Users</h3>
                 <div class="joined-user-stats">
                      <div class="joined-user-text">
-                        <p class="joined-1stp primary-color">50K</p>
-                        <p class="joined-2ndp">Active Users</p>
+                        <p class="joined-1stp primary-color inter-bold">50K</p>
+                        <p class="joined-2ndp inter-regular">Active Users</p>
                      </div>
                      <div class="joined-user-text">
-                        <p class="joined-1stp primary-color">2M+</p>
-                        <p class="joined-2ndp">Focus Sessions</p>
+                        <p class="joined-1stp primary-color inter-bold">2M+</p>
+                        <p class="joined-2ndp inter-regular">Focus Sessions</p>
                      </div>
                      <div class="joined-user-text">
-                        <p class="joined-1stp primary-color">95%</p>
-                        <p class="joined-2ndp">Satisfaction Rate</p>
+                        <p class="joined-1stp primary-color inter-bold">95%</p>
+                        <p class="joined-2ndp inter-regular">Satisfaction Rate</p>
                      </div>
                 </div>
             </div>
@@ -55,8 +62,28 @@
         <!--What our user say section  -->
         <section class="user-say-container">
             <div>
-                <h4>What our users say</h4>
-                <div>
+                <h2>What our users say</h2>
+                <div class="user-say-main">
+                    <div class="our-user-say">
+                        <img src="images/icon-star.png" alt="star icon">
+                        <img src="images/icon-star.png" alt="star icon">
+                        <img src="images/icon-star.png" alt="star icon">
+                        <img src="images/icon-star.png" alt="star icon">
+                        <img src="images/icon-star.png" alt="star icon">
+                        <h3 >Loved by designers</h3>
+                        <p class="our-user-say-p inter-regular">This template instantly leveled up our <br> presence.” – Studio Vertex</p>
+                        <div>
+                            <div class="reviewer"> 
+                                <img src="images/avatar.png" alt="user avatar">
+                                <div class="reviewer-text">
+                                    <p class="reviewer-text1">Reviewer name</p>
+                                    <p class="reviewer-text2">Date</p>
+
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
                     <div class="our-user-say">
                         <img src="images/icon-star.png" alt="star icon">
                         <img src="images/icon-star.png" alt="star icon">
@@ -64,7 +91,27 @@
                         <img src="images/icon-star.png" alt="star icon">
                         <img src="images/icon-star.png" alt="star icon">
                         <h3>Loved by designers</h3>
-                        <p class="our-user-say-p">This template instantly leveled up our <br> presence.” – Studio Vertex</p>
+                        <p class="our-user-say-p inter-regular">This template instantly leveled up our <br> presence.” – Studio Vertex</p>
+                        <div>
+                            <div class="reviewer"> 
+                                <img src="images/avatar.png" alt="user avatar">
+                                <div >
+                                    <p class="reviewer-text1">Reviewer name</p>
+                                    <p class="reviewer-text2">Date</p>
+
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="our-user-say">
+                        <img src="images/icon-star.png" alt="star icon">
+                        <img src="images/icon-star.png" alt="star icon">
+                        <img src="images/icon-star.png" alt="star icon">
+                        <img src="images/icon-star.png" alt="star icon">
+                        <img src="images/icon-star.png" alt="star icon">
+                        <h3>Loved by designers</h3>
+                        <p class="our-user-say-p inter-regular">This template instantly leveled up our <br> presence.” – Studio Vertex</p>
                         <div>
                             <div class="reviewer"> 
                                 <img src="images/avatar.png" alt="user avatar">
@@ -82,9 +129,9 @@
         <!-- Ready to focus better section -->
         <section class="ready-to-focus-container">
             <div class="ready-to-focus">
-                <h4>Ready to focus better</h4>
-                <p>This template instantly leveled up our presence.” – Studio Vertex</p>
-                <button class="primary-btn">Ger Started Free</button>
+                <h3 class="raleway-bold">Ready to focus better</h3>
+                <p class="inter-regular">This template instantly leveled up our presence.” – Studio Vertex</p>
+                <button class="primary-btn raleway-regular">Get Started Free</button>
                 <img src="images/wc-big.png" alt="Webflow confession 2022">
             </div>
         </section>
@@ -92,17 +139,17 @@
         <section class="get-in-touch-container">
             <div class="get-in-touch">
                 <div>
-                    <h5>Let’s Get in Touch</h5>
+                    <h4 class="railway-bold">Let’s Get in Touch</h4>
                 </div>
                 <div class="get-in-touch-form">
                     <form>
-                        <label for="email">Email</label>
+                        <label for="email" class="inter-medium">Email</label>
                         <input type="email" name="email" id="" placeholder="example@email.com" required>
-                        <label for="name">Name</label>
+                        <label for="name" class="inter-medium">Name</label>
                         <input type="text" name="name" id="" placeholder="full name" required>
-                        <label for="message">Message</label>
-                        <textarea name="message" id="" cols="21" rows="4" placeholder="write your message...." required></textarea>
-                        <button class="primary-btn get-button" type="submit" >Get in Touch</button>
+                        <label for="message" class="inter-medium">Message</label>
+                        <textarea name="message" id="" cols="21" rows="5" placeholder="write your message...." required></textarea>
+                        <button class="primary-btn get-button raleway-bold" type="submit" >Get in Touch</button>
                     </form>
                 </div>
             </div>
@@ -111,11 +158,11 @@
 
     </main>
     <!-- Footer section -->
-    <footer>
-        <div>
-            <h3>LOGO</h3>
-            <P>Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</P>
-            <div>
+    <footer class="footer-container">
+        <div class="footer-all">
+            <h3 class="primary-color inter-regular">DARK FLOW</h3>
+            <P class="inter-regular">Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</P>
+            <div class="footer-links inter-regular">
                 <a href="">Home</a>
                 <a href="">About</a>
                 <a href="">How it works</a>
